Add Higher Hire Information

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Simple-Evad
+Theme Name: Higher Hire
 Theme URI: 
-Description: A basic, bare-bones theme that utilizes bootstrap framework and is easy to customize for designers.
+Description: Custom theme for Higher Hire
 Version: 1.0
 Author: Dave Demuth
-Author URI: http://www.evaddesign.com
+Author URI: http://www.davedemuth.com
 Tags: simple, clean, customize, basic
 
 */
