--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Simple-Evad
 Theme URI: 
 Description: A basic, bare-bones theme that utilizes bootstrap framework and is easy to customize for designers.
-Version: 3.1
+Version: 3.4
 Author: Evad Design
 Author URI: http://www.evaddesign.com
 Tags: simple, clean, customize, basic
@@ -139,7 +139,15 @@ textarea:focus {
 	background-color: #fffbf7;
 }
 
-input[type=submit] {padding: 4px 10px; color: #666666; font-weight: bold; border: 1px solid #c7d1db; border-radius: 5px; -webkit-transition: border-color .2s ease-in, background-color .2s ease-in; -moz-border-radius: 12px; -webkit-border-radius: 10px; cursor: pointer;
+input[type=submit] {
+	padding: 4px 10px; 
+	color: #666666; 
+	font-weight: bold; 
+	border: 1px solid #c7d1db; 
+	border-radius: 5px; -webkit-transition: border-color .2s ease-in, background-color .2s ease-in; 
+	-moz-border-radius: 12px; 
+	-webkit-border-radius: 10px; 
+	cursor: pointer;
 background: #deefff; /* Old browsers */
 background: -moz-linear-gradient(top, #deefff 0%, #a8c5dd 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(100%,#a8c5dd)); /* Chrome,Safari4+ */
@@ -150,15 +158,18 @@ background: linear-gradient(top, #deefff 0%,#a8c5dd 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#a8c5dd',GradientType=0 ); /* IE6-9 */}
 
 input[type=submit]:hover,
-input[type=submit]:focus {border-color: #666; color: #666666;
-background: #c7d1db; /* Old browsers */
-background: -moz-linear-gradient(top, #c7d1db 0%, #bbc4ce 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c7d1db), color-stop(100%,#bbc4ce)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* IE10+ */
-background: linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7d1db', endColorstr='#bbc4ce',GradientType=0 ); /* IE6-9 */}
+input[type=submit]:focus {
+	border-color: #666; 
+	color: #666666;
+	background: #c7d1db; /* Old browsers */
+	background: -moz-linear-gradient(top, #c7d1db 0%, #bbc4ce 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c7d1db), color-stop(100%,#bbc4ce)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* IE10+ */
+	background: linear-gradient(top, #c7d1db 0%,#bbc4ce 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7d1db', endColorstr='#bbc4ce',GradientType=0 ); /* IE6-9 */
+}
 
 
 .home .page-wrap {
