--- a/style.css
+++ b/style.css
@@ -766,6 +766,11 @@ footer.footer-wrap {
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
 	
@@ -773,6 +778,7 @@ footer.footer-wrap {
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+	
 	#header-section a.logo {
     	text-align: left;
 	}
